# rey

./: .gitignore  ANALYSIS.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_AUDIT.md  Makefile  NITPICKS.md  SPEC.md  STRUCTURE.md  WASM.md  ZOO.md  coverage_output.txt  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml
.kiro/specs/rey-e2e-encrypted-photo-storage/: .config.kiro  design.md  requirements.md  tasks.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/d/: layout.tsx  page.tsx
apps/web/src/app/d/home/: page.tsx
apps/web/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  debug-panel.tsx  login-form.tsx  masonry-grid.tsx  nav-user.tsx  photo-viewer.tsx  protected-route.tsx  signup-form.tsx  site-header.tsx  upload-dropzone.tsx  wasm-init.tsx
apps/web/src/components/ui/: sidebar.tsx
apps/web/src/lib/: api.ts  auth-crypto.ts  auth-schema.ts  auth-store.ts  ffmpeg-store.ts  file-viewer.ts  gallery-api.ts  thumbnail.ts  upload-manager.ts  upload-types.ts  wasm-loader.ts  wasm-store.ts
apps/web/src/types/: heic-convert.d.ts
crates/client-lib/: Cargo.toml
crates/client-lib/src/: error.rs  state.rs
crates/client-lib/src/commands/: auth.rs  collections.rs  device.rs  files.rs  mod.rs  search.rs  sync.rs  thumbnails.rs  upload.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  result.rs  telemetry.rs  time.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  lib.rs  prop_tests.rs  util.rs
crates/crypto/src/aead/: mod.rs  secretbox.rs  stream.rs
crates/crypto/src/kdf/: argon.rs  blake2b.rs  mod.rs
crates/crypto/src/key/: decrypt.rs  encrypt.rs  generate.rs  mod.rs
crates/crypto/src/seal/: box_.rs  keypair.rs  mod.rs
crates/image/: Cargo.toml
crates/image/src/: decode.rs  encode.rs  error.rs  exif.rs  lib.rs  orientation.rs  resize.rs
crates/local-db/: Cargo.toml
crates/local-db/migrations/: 001_initial.sql  002_fts5.sql
crates/local-db/src/: collections.rs  connection.rs  error.rs  files.rs  lib.rs  search.rs  sync_state.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: decrypt.rs  encrypt.rs  error.rs  lib.rs  magic.rs  structs.rs
crates/sync/: Cargo.toml
crates/sync/src/: cursor.rs  decrypt.rs  diff.rs  error.rs  lib.rs  pull.rs  thumbnails.rs
crates/sync/tests/: sync_error.rs
crates/thumbnail/: Cargo.toml
crates/thumbnail/src/: decrypt.rs  download.rs  encrypt.rs  error.rs  generate.rs  inflight.rs  invalidation.rs  lib.rs  preview.rs
crates/thumbnail/src/cache/: disk.rs  memory.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: collection.rs  crypto.rs  device.rs  error.rs  file.rs  lib.rs  share.rs  sse.rs  sync.rs  upload.rs  user.rs
crates/zoo/: Cargo.toml
crates/zoo-client/: Cargo.toml
crates/zoo-client/src/: download.rs  error.rs  lib.rs  orchestrator.rs  sse.rs  upload.rs
crates/zoo-client/tests/: download_tests.rs  error_tests.rs  integration.rs  sse_client.rs  sse_tests.rs  unit.rs  upload_tests.rs  wiremock_tests.rs  zoo_error.rs
crates/zoo-wasm/: Cargo.toml
crates/zoo-wasm/src/: client.rs  config.rs  crypto_wasm.rs  lib.rs
crates/zoo-wasm/tests/: config.rs
crates/zoo/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_devices.sql  004_create_uploads.sql  005_create_upload_parts.sql  006_create_files.sql  007_create_shares.sql  008_add_uploads_stall_index.sql  009_create_collections.sql
crates/zoo/src/: config.rs  error.rs  lib.rs  rate_limit.rs  state.rs  types.rs  validation.rs
crates/zoo/src/api/: auth.rs  collections.rs  devices.rs  events.rs  files.rs  mod.rs  sync.rs  uploads.rs
crates/zoo/src/auth/: middleware.rs
crates/zoo/src/db/: collections.rs  devices.rs  files.rs  mod.rs  models.rs  sessions.rs  upload_parts.rs  uploads.rs  users.rs
crates/zoo/src/s3/: client.rs  mod.rs  presigner.rs
crates/zoo/src/sse/: events.rs  hub.rs  mod.rs
crates/zoo/src/workers/: garbage_collector.rs  mod.rs  stall_detector.rs
crates/zoo/tests/: integration.rs  sse_events.rs
docs/: ente-architecture.md  roadmap.md
tasks/: PARALLEL_GUIDE.md
tasks/wave-0-scaffold/: TASK-01.md
tasks/wave-1-layer0/: TASK-02.md  TASK-03.md
tasks/wave-2-layer1/: TASK-05.md  TASK-06.md  TASK-07.md  TASK-08.md
tasks/wave-3-layer2/: TASK-10.md  TASK-11.md  TASK-12.md  TASK-13.md
tasks/wave-4-layer3/: TASK-15.md  TASK-16.md
tasks/wave-5-apps/: TASK-18.md  TASK-19.md
