[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/common",
    "crates/crypto",
    "crates/image",
    "crates/metadata",
    "crates/thumbnail",
    "crates/local-db",
    "crates/sync",
    "crates/zoo-client",
    "crates/zoo",
    "crates/client-lib",
    "crates/zoo-wasm",
    "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/reymotion/rey"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "macros", "uuid", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
argon2 = "0.5"
blake2b_simd = "1"
chacha20poly1305 = "0.10"
xsalsa20poly1305 = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17"
lru = "0.16"
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
keyring = "3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
aws-sdk-s3 = "1"
aws-config = "1"
utoipa = { version = "5", features = ["axum_extras"] }
tauri = { version = "2", features = [] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.25"
rand_core = "0.6"
proptest = "1"
wiremock = "0.6"
tempfile = "3"
base64 = "0.22"
hex = "0.4"
image = "0.25"
kamadak-exif = "0.5"
secrecy = "0.10"
dirs-next = "2.0"
toml = "0.9"
types = { path = "crates/types" }
subtle = "2.5"
aead = "0.5"
getrandom = { version = "0.3", features = ["wasm_js"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
common = { path = "crates/common" }
rey-image = { path = "crates/image" }
metadata = { path = "crates/metadata" }
thumbnail = { path = "crates/thumbnail" }
crypto = { path = "crates/crypto" }
local-db = { path = "crates/local-db" }
zoo-client = { path = "crates/zoo-client" }
zoo = { path = "crates/zoo" }
sync = { path = "crates/sync" }
client-lib = { path = "crates/client-lib" }
zoo-wasm = { path = "crates/zoo-wasm" }

[profile.dev.package.crypto]
opt-level = 3

[profile.dev]
debug = true

[profile.release]
lto = "thin"
opt-level = 3
