[package]
name = "client-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-specta"]

[dependencies]
types = { workspace = true }
sync = { workspace = true }
local-db = { workspace = true }
thumbnail = { workspace = true }
zoo-client = { workspace = true }
common = { workspace = true }
crypto = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tauri = { workspace = true, optional = true }
tauri-specta = { workspace = true, optional = true }
specta = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
infer = "0.19"
chrono = { workspace = true }
reqwest = { workspace = true }
