[package]
name = "crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["rand_core/getrandom", "x25519-dalek/static_secrets"]
no_std = []

[dependencies]
types = { workspace = true }
zeroize = { workspace = true }
chacha20poly1305 = { workspace = true }
xsalsa20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
argon2 = { workspace = true }
blake2b_simd = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
aead = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = { workspace = true }
