[package]
name = "rey-image"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
types = { workspace = true }
common = { workspace = true }
image = { workspace = true }
kamadak-exif = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
