[package]
name = "metadata"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
types = { workspace = true }
crypto = { workspace = true }
rey-image = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
