[package]
name = "thumbnail"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
types = { workspace = true }
crypto = { workspace = true }
rey-image = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
image = { workspace = true }
