[package]
name = "zoo-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-utils = []

[dependencies]
types = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
async-stream = "0.3"
serde = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
bcrypt = { workspace = true }
sha2 = "0.10"
reqwest = { workspace = true, features = ["blocking"] }
sqlx = { workspace = true }
zoo = { path = "../zoo" }
axum = { workspace = true }
