[package]
name = "zoo-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
types = { workspace = true }
zoo-client = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"
serde = { workspace = true }
uuid = { workspace = true }
