[package]
name = "zoo-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
types = { workspace = true }
crypto = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"
serde = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
rand_core = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Optional: HTTP client (not available in WASM yet)
zoo-client = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
default = ["client"]
client = ["zoo-client", "wasm-bindgen-futures", "uuid"]
