[package]
name = "zoo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zoo-server"
path = "bin/server.rs"

[features]
default = ["s3"]
s3 = []
local-fs = []

[dependencies]
types = { workspace = true }
common = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
sqlx = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
sha2 = "0.10"
rand = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
anyhow = "1"
reqwest = { workspace = true }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
